--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    hihi
     <!-- Form đăng nhập/đăng ký -->
     <div id="auth" style="display: none;">
         <h2 id="auth-title">Đăng nhập</h2>
