--- a/src/index.html
+++ b/src/index.html
@@ -33,19 +33,19 @@
         <div id="stones-in-hand">Sỏi trên tay: 0</div>
         <div id="message"></div>
         <div id="game-board">
-            <div class="cell quan" data-index="11"></div>
+            <div class="cell quan quan-left" data-index="11"></div>
             <div class="cell" data-index="10"></div>
             <div class="cell" data-index="9"></div>
             <div class="cell" data-index="8"></div>
             <div class="cell" data-index="7"></div>
             <div class="cell" data-index="6"></div>
-            <div class="cell quan" data-index="5"></div>
+            <div class="cell quan quan-right" data-index="5"></div>
             <div class="cell" data-index="0"></div>
             <div class="cell" data-index="1"></div>
             <div class="cell" data-index="2"></div>
             <div class="cell" data-index="3"></div>
             <div class="cell" data-index="4"></div>
-        </div>
+        </div>    
     </div>
 
     <script src="script.js"></script>
