--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,79 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Form đăng nhập/đăng ký -->
     <div id="auth", style="display: none;">
-    <form id="auth-form">
-        <h2 id="auth-title">Đăng nhập</h2>
-        <input type="text" id="username" placeholder="Tên đăng nhập" required />
-        <input type="password" id="password" placeholder="Mật khẩu" required />
-        <button type="submit" id="auth-submit">Đăng nhập</button>
-        <p><a href="#" id="toggle-auth">Đăng ký</a></p>
-    </form>
+        <form id="auth-form">
+            <h2 id="auth-title">Ô ăn quan</h2>
+            <input type="text" id="username" placeholder="Tên người dùng" required>
+            <input type="password" id="password" placeholder="Mật khẩu" required>
+            <button type="submit" id="auth-submit">Đăng nhập</button>
+            <p><a href="#" id="toggle-auth">Đăng ký</a></p>
+
+        </form>
     </div>
 
+    <div id="waiting-room" class="waiting-screen" style="display: none;">
+    <div class="waiting-box">
+        <h2>Chào mừng, <span id="username-display"></span>!</h2>
+        <div class="waiting-buttons">
+        <button id="play-btn">🎮 Chơi game</button>
+        <button id="stats-btn">📊 Thông số</button>
+        <button id="help-btn">❓ Hướng dẫn</button>
+        <button id="logout-btn">🚪 Đăng xuất</button>
+        </div>
+    </div>
+    </div>
+
+    <!-- Giao diện trò chơi -->
+    <div id="game", style="display: none;">
+        <div id="user-info">
+            <span id="username-display"></span> |
+            Thắng: <span id="wins">0</span> |
+            Xu: <span id="coins">0</span>
+        </div>
+        <div id="stones-in-hand">Sỏi trên tay: 0</div>
+        <!-- Player 2: ô chứa ở góc trái trên -->
+        <div id="player2-container" class="score-container top-left">
+            <div class="score-label">Người chơi 2</div>
+            <div id="score2-display" class="score-box"></div>
+        </div>
+
+        <div id="game-board">
+            <div class="cell quan quan-left" data-index="11"></div>
+            <div class="cell" data-index="10"></div>
+            <div class="cell" data-index="9"></div>
+            <div class="cell" data-index="8"></div>
+            <div class="cell" data-index="7"></div>
+            <div class="cell" data-index="6"></div>
+            <div class="cell quan quan-right" data-index="5"></div>
+            <div class="cell" data-index="0"></div>
+            <div class="cell" data-index="1"></div>
+            <div class="cell" data-index="2"></div>
+            <div class="cell" data-index="3"></div>
+            <div class="cell" data-index="4"></div>
+            
+            <!-- Player 1: ô chứa ở góc phải dưới -->
+            <div id="player1-container" class="score-container bottom-right">
+                <div class="score-label">Người chơi 1</div>
+                <div id="score1-display" class="score-box"></div>
+            </div>
+
+        </div>    
+
+    <button id="menu-button" class="menu-button">☰</button>
+
+    <div id="popup-overlay" class="popup-overlay">
+        <div class="popup-box">
+            <button id="popup-close" class="popup-close">×</button>
+            <h2>Tùy chọn trò chơi</h2>
+            <div class="popup-buttons">
+                <button onclick="popup.style.display = 'none'; newGame++; initGame(); ">🎮 Chơi lại</button>
+                <button onclick="alert('Sẽ thêm hướng dẫn sau')">❓ Hướng dẫn</button>
+                <button onclick="location.reload()">🚪 Trở về màn hình nền</button>
+            </div>
+        </div>
+    </div>
+    </div>
     <script src="js/bot.js"></script>
     <script src="js/end-game.js"></script>
     <script src="js/game-logic.js"></script>
@@ -28,6 +90,5 @@
     <script src="js/update-state.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/valuable.js"></script>
-
 </body>
 </html>
